@startuml
skinparam linetype polyline
skinparam linetype ortho

!startsub INTERNAL
package src.engine.gui{
    class src.engine.gui.GUIManager
    class src.engine.gui.Icon
    class src.engine.gui.PolygonFolder
    class src.engine.gui.PolygonFolderManager
    class src.engine.gui.Font

    !includesub src.engine.gui.frames.puml!INTERNAL
}

src.engine.gui.PolygonFolderManager o-- src.engine.gui.PolygonFolder
src.engine.gui.GUIManager o-- src.engine.gui.PolygonFolderManager
src.engine.gui.GUIManager o-- src.engine.gui.Icon
src.engine.gui.GUIManager ..> src.engine.gui.Font
!endsub

!startsub EXTERNAL
    !includesub src.engine.gui.frames.puml!EXTERNAL

    src.engine.gui.GUIManager .> src.program.ViewMode
    src.engine.gui.GUIManager o--o src.engine.Engine
    src.engine.gui.PolygonFolderManager .> src.error.PolygonFolderNotFoundError
!endsub

hide members

@enduml